--- a/S04.02-Exercise-DisplayDayForecast/app/src/main/res/layout/activity_detail.xml
+++ b/S04.02-Exercise-DisplayDayForecast/app/src/main/res/layout/activity_detail.xml
@@ -3,4 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/tv_detail_weather"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="22sp"
+        android:text="@string/detail_weather"/>
+
 </FrameLayout>
