--- a/S06.02-Exercise-SettingsFragment/app/src/main/res/layout/activity_settings.xml
+++ b/S06.02-Exercise-SettingsFragment/app/src/main/res/layout/activity_settings.xml
@@ -13,9 +13,8 @@
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
--->
-<!-- TODO (7) Make the SettingsFragment the root layout for SettingsActivity -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/weather_settings_container"
+--><fragment
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:name="com.example.android.sunshine.SettingsFragment"
+    xmlns:android="http://schemas.android.com/apk/res/android" />
