--- a/S11.01-Exercise-NewListItemLayout/app/src/main/res/layout/forecast_list_item.xml
+++ b/S11.01-Exercise-NewListItemLayout/app/src/main/res/layout/forecast_list_item.xml
@@ -14,28 +14,61 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<!-- TODO (2) Remove the old layout -->
-<!-- TODO (3) Use ConstraintLayout to create the new list item layout -->
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <!-- This TextView holds the weather data for one particular day in the forecast -->
+
+    <ImageView
+        android:id="@+id/weather_icon"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="6dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:background="@drawable/art_clear"/>
+
     <TextView
-        android:id="@+id/tv_weather_data"
-        style="@style/TextAppearance.AppCompat.Large"
+        android:id="@+id/weather_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"/>
-
-    <!-- This View serves as a visual divider between list items -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/weather_icon"
+        android:layout_marginTop="16dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:background="#dadada"/>
+        tools:text="Today, December 5"/>
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/weather_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/weather_date"
+        app:layout_constraintLeft_toLeftOf="@+id/weather_date"
+        tools:text="Clear"/>
+
+    <TextView
+        android:id="@+id/weather_temp_min"
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/weather_icon"
+        android:layout_marginRight="16dp"
+        android:textSize="26sp"
+        tools:text="13°"/>
+
+    <TextView
+        android:id="@+id/weather_temp_max"
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toLeftOf="@+id/weather_temp_min"
+        app:layout_constraintTop_toTopOf="@+id/weather_icon"
+        android:layout_marginRight="16dp"
+        android:textSize="26sp"
+        tools:text="22°"/>
+
+</android.support.constraint.ConstraintLayout>
